@@ -62,6 +62,7 @@ settings_import_title=Import settings
 settings_export_title=Export settings
 settings_preset=Preset:
 settings_imported=Imported
+settings_preset_modified=(Modified)
 settings_import=Import
 settings_export=Export
 settings_reset_preset=Reset
