@@ -9,6 +9,7 @@ Date: ????
   Changes:
     - Infinite milestones marked as "hidden" will now only have the initial milestone hidden. Milestones created from the infinite milestone's completion will be visible.
     - Added a small text to fill the space when no milestones are visible at all, to make it look more intentionally empty.
+    - Marked the selected preset name with "(Modified)" if the current set has been modified compared to the preset.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.21
